--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -40,6 +40,14 @@ body {
   border-radius: 50%;
 }
 
+.active-circle {
+  width: 55px;
+  height: 55px;
+  margin-top: 8px;
+  border: 2px solid #282828;
+  border-radius: 50%;
+}
+
 
 .disabledButton {
   background-color: #d8d8d8;
