--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -88,12 +88,36 @@ li {
 }
 
 .nav-bar {
+  display: flex;
   background: linear-gradient(-90deg, #84cf6a, #16c0b0);
   height: 60px;
   margin-bottom: 25px;
   -webkit-box-shadow: 0px 2px 15px -12px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 2px 15px -12px rgba(0, 0, 0, 0.57);
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.57);
+}
+
+.nav-bar-container {
+  display: inline-block;
+  text-align: right;
+  align-self: center;
+  width: 100%;
+}
+
+.nav-bar-button {
+  background-color: #39495c;
+  border-radius: 5px;
+  font-size: 18px;
+  width: 160px;
+  height: 40px;
+  margin: 5px;
+  padding: 5px;
+  color: white;
+  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17),
+    inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15),
+    inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
+  text-align: center;
+  cursor: pointer;
 }
 
 .out-of-stock-img {
